[gd_scene load_steps=2 format=3 uid="uid://cpfdao5jvim86"]

[ext_resource type="Script" path="res://menu.gd" id="1_l63f1"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l63f1")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -139.0
offset_right = 102.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="RichTextLabel" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
text = "GAME NAME"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="Start" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "START"

[node name="Option" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "OPTIONS"

[node name="Quit" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIT"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
